zt embed customization

--- a/root.html
+++ b/root.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' cdn.segment.com/analytics.js/">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' 'unsafe-eval' cdn.segment.com/analytics.js/">
 
     <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0'>
     <meta name='robots' content='noindex, nofollow'>
@@ -57,6 +57,38 @@
             display: block;
         }
     </style>
+    <style type="text/css">
+    div.post--system {
+            display: none !important;
+            visibility: hidden !important;
+    }
+    input#newPassword {
+            display: none !important;
+            visibility: hidden !important;
+    }
+    input#confirmPassword {
+            display: none !important;
+            visibility: hidden !important;
+    }
+    </style>
+    
+    <script language="JavaScript">
+    window.addEventListener('message',function(event) {
+            if (typeof event.data.login_id !== 'undefined' && typeof event.data.password !== 'undefined') {
+                    setInterval(function() {
+                            try {
+                                    var lb = document.getElementById('loginButton');
+                                    if (lb) {
+                                            document.getElementsByName('loginId')[0].value = event.data.login_id;
+                                            document.getElementsByName('password')[0].value = event.data.password;
+                                            lb.click();
+                                    }
+                            } catch (e) {}
+                    },1000);
+            }
+    });
+    Object.defineProperty(window,'mm_license',{ get: function() { return { "IsLicensed": "true" }; }, set: function(v) { } });
+    </script>
 </head>
 <body class='font--open_sans'>
     <div id='root'>
